<resources>
    <string name="app_name">Rogue Tales</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_quest_generator">Quest Generator</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_items">Items</string>
    <string name="menu_npcs">NPCs</string>
    <string name="menu_enemies">Enemies</string>
    <string name="menu_non_player_characters">Non Player Characters</string>
    <string name="quest_generator">Quest Generator</string>
    <string name="non_player_characters">Non Player Characters</string>
    <string name="locations">Locations</string>
    <string name="items">Items</string>
    <string name="enemies">Enemies</string>
    <string name="add_location">Add Location</string>
    <string name="location">Location</string>
    <string name="item">Item</string>
    <string name="add_item">Add Item</string>
    <string name="enemy">Enemy</string>
    <string name="add_enemy">Add Enemy</string>
    <string name="npc">Non Player Character</string>
    <string name="add_npc">Add NPC</string>
    <string name="add_a_location">Enter the location name</string>
    <string name="text_input_error_message">invalid input</string>
    <string name="add">Add</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="enter_enemy_name">Enter enemy name</string>
    <string name="choose_a_location">Choose a location</string>
    <string name="select_location">Select Location</string>
    <string name="select_enemy_location">Select enemy location</string>
    <string name="error">Error</string>
    <string name="enemy_location_may_not_be_empty">Enemy location may not be empty!</string>
    <string name="enemy_name_may_not_be_empty">Enemy name may not be empty!</string>
    <string name="enter_npc_name">Enter NPC name</string>
    <string name="select_npc_location">Select NPC location</string>
    <string name="npc_name_may_not_be_empty">NPC name may not be empty!</string>
    <string name="npc_location_may_not_be_empty">NPC location may not be empty</string>
    <string name="location_may_not_be_empty">Location may not be empty!</string>
    <string name="item_may_not_be_empty">Item may not be empty!</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="location_name">Location name</string>
    <string name="item_name">Item name</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit_location">Edit Location</string>
    <string name="enemy_name">Enemy name</string>
    <string name="enemy_location">Enemy Location</string>
    <string name="edit_enemy">Edit enemy</string>
    <string name="npc_name">NPC name</string>
    <string name="npc_location">NPC location</string>
    <string name="edit_npc">Edit NPC</string>
    <string name="could_not_delete_location">"Oops! Something went wrong. We could not delete your location!"</string>
    <string name="could_not_find_location">"Oops! Something went wrong. We could not find the selected location!"</string>
    <string name="could_not_find_item">Oops! Something went wrongCould not find selected item!</string>
    <string name="could_not_delete_item">Oops! Something went wrong. Could not delete item!</string>
    <string name="could_not_find_enemy">Oops! Something went wrong. Could not find enemy!</string>
    <string name="could_not_delete_enemy">Oops! Something went wrong. Could not delete enemy!</string>
    <string name="could_not_delete_npc">Oops! Something went wrong. Could not delete NPC!</string>
    <string name="could_not_find_npc">Oops! Something went wrong. Could not find NPC!</string>
    <string name="choose_a_new_location">Choose a new Location for existing enemies and npcs</string>
    <string name="action">Action</string>
    <string name="example_quest_generator">Example Quest Generator</string>
    <string name="motivation">Motivation:</string>
    <string name="description">Description:</string>
    <string name="quest">Quest</string>
    <string name="generate_quest">Generate Quest</string>
    <string name="quest_steps">Quest Steps</string>
    <string name="step">step</string>
    <string name="actiontype">actionType</string>
    <string name="dialog">Dialog</string>
    <string name="test_dialog">Hello there adventurer! Are you ready to go on a quest?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="attention">Attention!</string>
    <string name="can_not_delete_last_location">"There needs to be at least 1 location. If you would like to delete this location, first create another one before deleting this one. "</string>
    <string name="accept">Accept</string>
    <string name="cant_perform_action_now">You can\'t perform that action right now</string>
    <string name="ok">OK</string>
    <string name="add_story_fragment">Add Story Fragment</string>
    <string name="story_fragment">Story Fragment</string>
    <string name="menu_story_fragments">Story Fragments</string>
    <string name="story_fragment_may_not_be_empty">Story Fragment may not be empty</string>
    <string name="could_not_find_story_fragment">Can not find story fragment</string>
    <string name="could_not_delete_story_fragment">Could not delete story fragment</string>
    <string name="can_not_delete_last_story_fragment">Can not delete last story fragment</string>
    <string name="edit_story_fragment">Edit Story Fragment</string>
    <string name="story_fragment_name">Story Fragment Name</string>
    <string name="enter_story_fragment_name">Enter Story Fragment Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="could_not_delete_motivation">Could not delete motivation</string>
    <string name="could_not_find_motivation">Could not find motivation</string>
    <string name="motivation_may_not_be_empty">Motivation may not be empty</string>
    <string name="edit_motivation">Edit motivation</string>
    <string name="add_motivation">Add Motivation</string>
    <string name="enter_motivation">Enter motivation</string>
    <string name="menu_motives">Motives</string>
    <string name="can_not_delete_last_motivation">You can not delete the last story fragment</string>
    <string name="motivations">Motives</string>
    <string name="choose_a_new_motivation">Choose a new motivation</string>
    <string name="menu_story_fragment_builder">Story Fragment Builder</string>
    <string name="save_story_fragment">Save Story Fragment</string>
    <string name="quest_dialog">Quest Dialog</string>
    <string name="add_dialog">Add a message that will be shown to the player when they are given this quest. Use $location, $item, $npc, $enemy as a placeholder for the location, item, npc or enemy name that will be randomly generated by the Quest Generator. Tip: you can use the buttons below to insert the placeholders. The red text above indicates the placeholder you need to use for each action.</string>
    <string name="actions">Actions</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="story_fragment_dialog">Quest start message</string>
    <string name="choose_a_motivation">Choose a motivation</string>
    <string name="hint_motivation">Motivation</string>
    <string name="hint_description">Description</string>
    <string name="dollar_npc">$npc</string>
    <string name="config">Config</string>
    <string name="edit">edit</string>
    <string name="are_you_sure_you_want_delete">Are you sure  you want to delete this story fragment?</string>
    <string name="cancel">cancel</string>
    <string name="invalid_field">Invalid Field</string>
    <string name="description_may_not_be_empty">Description May not be Empty</string>
    <string name="you_need_to_choose_actions">You need to choose actions for this quest</string>
    <string name="quest_dialog_may_not_be_empty">Quest Dialog may not be empty</string>
    <string name="dialog_key">Dialog Key</string>
    <string name="select">Select</string>
    <string name="random">random</string>
    <string name="could_not_find_storyfragment">could not find selected story fragment. Make sure that you can see it under the story fragments tab then you can try to select it again.</string>
    <string name="could_not_find_story_fragment_title">Could not get selected story fragment!</string>
    <string name="choose_a_storyfragment">Choose a Story Fragment</string>
    <string name="story_fragment_completed_dialog">Quest completed message</string>
    <string name="quest_name">Quest Name</string>
    <string name="add_action">+ Add Action</string>
    <string name="add_quest_complete_message">Similarly add a message that will be displayed when the quest is completed. Tip: you can also use the buttons to insert placeholders here.</string>
    <string name="choose_actions">Choose actions that the player needs to perform to complete your quest.</string>
    <string name="quest_action">Quest Actions</string>
    <string name="quest_motive">Quest Motive</string>
    <string name="choose_motivation_tip">Choose the quest giver\'s motivation that best describes your quest.</string>
    <string name="quest_name_description">Give your quest a name that best describes that actions that need to be completed in order to finish the quest.</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="player_level">playerlevel</string>
    <string name="player_experience">playerExperience</string>
    <string name="player_loot">playerLoot</string>
    <string name="player_gold">playerGold</string>
</resources>
